# smart_gui

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
backend/: README.md  requirements.txt
backend/app/: main.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/test/: widget_test.dart
launch/: smart_gui_api.launch.py
resource/: smart_gui
smart_gui/: __init__.py  random_int8_topics_node.py  ros2_inspector_api.py
